--- a/weather/package.json
+++ b/weather/package.json
@@ -7,7 +7,10 @@
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "axios": "^1.3.5",
     "luxon": "^3.3.0",
+    "mongodb": "^5.2.0",
+    "mongoose": "^7.0.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
